--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
+    <!-- Meta tags for character encoding, compatibility, and viewport settings -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MEME Generator </title>
+
+    <!-- Title of the webpage -->
+    <title>MEME Generator</title>
+
+    <!-- Link to the external CSS stylesheet -->
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
+    <!-- Main container for the meme generator -->
     <div class="meme_generator">
+      <!-- Button to generate a new meme -->
       <button class="generate_meme_button">Generate Meme</button>
+
+      <!-- Placeholder for the meme title, initially set to "Loading..." -->
       <h1 class="meme_title">Loading...</h1>
 
-      <img src="" alt="" />
+      <!-- Placeholder for the meme image -->
+      <img src="" alt="Meme Image" />
+
+      <!-- Placeholder for the meme author's name -->
       <div class="meme_author"></div>
     </div>
 
+    <!-- Link to the external JavaScript file -->
     <script src="script.js"></script>
-    
   </body>
-
 </html>
